payment-mode response